deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
  namespace: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      containers:
        - name: ollama
          image: ollama/ollama:0.1.42
          volumeMounts:
            - mountPath: /root/.ollama
              name: ollama-storage
          ports:
            - containerPort: 11434
      volumes:
        - name: ollama-storage
          persistentVolumeClaim:
            claimName: ollama-pvc
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama-webui
  namespace: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama-webui
  template:
    metadata:
      labels:
        app: ollama-webui
    spec:
      containers:
        - name: ollama-webui
          image: ghcr.io/open-webui/open-webui:main
          volumeMounts:
            - mountPath: /app/backend/data
              name: webui-storage
          ports:
            - containerPort: 8080
      volumes:
        - name: webui-storage
          persistentVolumeClaim:
            claimName: ollama-webui-pvc
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: ollama
spec:
  selector:
    app: ollama
  ports:
    - protocol: TCP
      port: 11434
      targetPort: 11434
---
apiVersion: v1
kind: Service
metadata:
  name: ollama-webui
  namespace: ollama
spec:
  selector:
    app: ollama-webui
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: owui-ingress
  namespace: ollama
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: ollama-webui
                port:
                  number: 8080
            path: /
